--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,13 +9,13 @@
                     <a [routerLink]="['/home']" [routerLinkActive]="['active']"><span class="glyphicon glyphicon-home"></span> Ana Sayfa</a>
                 </li>
                 <li>
-                    <a [routerLink]="['/timeline']" [routerLinkActive]="['active']"><span class="glyphicon glyphicon-th-list"></span> Hikayelerim</a>
+                    <a [routerLink]="['/timeline']" [routerLinkActive]="['active']"><span class="glyphicon glyphicon-th-list"></span> Paylaşımlarım</a>
                 </li>
                 <li>
-                    <a [routerLink]="['/gente']" [routerLinkActive]="['active']"><span class="glyphicon glyphicon-user"></span> Arkadaşlar</a>
+                    <a [routerLink]="['/people']" [routerLinkActive]="['active']"><span class="glyphicon glyphicon-user"></span> Arkadaşlar</a>
                 </li>
                 <li>
-                    <a [routerLink]="['/mensajes']" [routerLinkActive]="['active']"><span class="glyphicon glyphicon-envelope"></span> Mesajlar</a>
+                    <a [routerLink]="['/message']" [routerLinkActive]="['active']"><span class="glyphicon glyphicon-envelope"></span> Mesajlar</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right" *ngIf="!identity">
