--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -59,7 +59,7 @@
                 </a>
             </div>
             <div class="following-data">
-                <a [routerLink]="['/perfil', user._id]">
+                <a [routerLink]="['/profil', user._id]">
                     <span class="label-stats">
                         Gönderiler:
                     </span>
