--- a/src/app/messages/components/add/add.component.html
+++ b/src/app/messages/components/add/add.component.html
@@ -4,7 +4,7 @@
     </h3>
     <div class="alert alert-success" *ngIf="status == 'success'">
         Mesajı
-        Görüntüle: <a [routerLink]="['/mensajes/enviados']">Gönderilen mesaj</a>
+        Görüntüle: <a [routerLink]="['/message/enviados']">Gönderilen mesaj</a>
     </div>
     <div class="alert alert-danger" *ngIf="status == 'error'">
         Mesaj gömnderilemedi
