--- a/src/app/components/followed/followed.component.html
+++ b/src/app/components/followed/followed.component.html
@@ -12,7 +12,7 @@
                     </div>
                     <div class="username pull-left">
                         <p class="name-surname">
-                            <a [routerLink]="['/perfil', follow.user._id]">
+                            <a [routerLink]="['/profil', follow.user._id]">
                                 {{follow.user.name + ' ' + follow.user.surname}}
                             </a>
                         </p>
