--- a/src/app/components/following/following.component.html
+++ b/src/app/components/following/following.component.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="username pull-left">
                         <p class="name-surname">
-                            <a [routerLink]="['/perfil', follow.followed._id]">
+                            <a [routerLink]="['/profil', follow.followed._id]">
                                 {{follow.followed.name + ' ' + follow.followed.surname}}
                             </a>
                         </p>
