--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -12,7 +12,7 @@
                         </a>
                     </div>
                     <div>
-                        <a class="username" [routerLink]="['/perfil', publication.user._id]">
+                        <a class="username" [routerLink]="['/profil', publication.user._id]">
                             {{publication.user.name + ' '+ publication.user.surname}}
                         </a>
                         &nbsp;|&nbsp;
