--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -5,14 +5,14 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div class="image-user pull-left">
-                        <a [routerLink]="['/perfil', user._id]">
+                        <a [routerLink]="['/profil', user._id]">
                             <img src="{{url + 'get-image-user/' + user.image}}" *ngIf="user.image" />
                             <img src="assets/user.png" class="avatar-default" *ngIf="!user.image" />
                         </a>
                     </div>
                     <div class="username pull-left">
                         <p class="name-surname">
-                            <a [routerLink]="['/perfil', user._id]">
+                            <a [routerLink]="['/profil', user._id]">
                                 {{user.name + ' ' + user.surname}}
                             </a>
                         </p>
