--- a/src/app/messages/components/main/main.component.html
+++ b/src/app/messages/components/main/main.component.html
@@ -5,19 +5,19 @@
     <div class="sidebar-admin">
         <ul class="nav nav-pills nav-stacked nav-pills-stacked-example">
             <li role="presentation" [routerLinkActive]="['active']">
-                <a [routerLink]="['enviar']">Mesaj gönder</a>
+                <a [routerLink]="['submit']">Mesaj gönder</a>
             </li>
             <li role="presentation" [routerLinkActive]="['active']">
-                <a [routerLink]="['recibidos']">Gelen mesajlar</a>
+                <a [routerLink]="['received']">Gelen mesajlar</a>
             </li>
             <li role="presentation" [routerLinkActive]="['active']">
-                <a [routerLink]="['enviados']">Gönderilen Meesajlar</a>
+                <a [routerLink]="['sent']">Gönderilen Meesajlar</a>
             </li>
             <!--            <li role="presentation" [routerLinkActive]="['active']">
                 <a [routerLink]="['conversation']">Conversaciones</a>
             </li>-->
             <li role="presentation" [routerLinkActive]="['active']">
-                <a [routerLink]="['gente']">Mesajlar</a>
+                <a [routerLink]="['people']">Mesajlar</a>
             </li>
         </ul>
     </div>
