--- a/src/app/messages/components/received/received.component.html
+++ b/src/app/messages/components/received/received.component.html
@@ -7,7 +7,7 @@
             <div class="panel panel-default" *ngIf="message.emitter">
                 <div class="panel-body">
                     <div class="image-user pull-left">
-                        <a [routerLink]="['/perfil', message.emitter._id]">
+                        <a [routerLink]="['/profil', message.emitter._id]">
                             <img src="{{url + 'get-image-user/' + message.emitter.image}}"
                                 *ngIf="message.emitter.image" />
                             <img src="assets/user.png" *ngIf="!message.emitter.image" />
@@ -15,7 +15,7 @@
                     </div>
                     <div class="username pull-left">
                         <p class="name-surname">
-                            <a [routerLink]="['/perfil', message.emitter._id]">
+                            <a [routerLink]="['/profil', message.emitter._id]">
                                 {{message.emitter.name + ' ' + message.emitter.surname}}
                             </a>
                             &nbsp;|&nbsp;
@@ -35,8 +35,8 @@
             </div>
         </div>
         <ul class="pagination pull-right">
-            <li *ngIf="page > 1 && total > 0"><a [routerLink]="['/mensajes/recibidos', prev_page]">Önceki</a></li>
-            <li *ngIf="pages != page && total > 0"><a [routerLink]="['/mensajes/recibidos', next_page]">Sonraki</a></li>
+            <li *ngIf="page > 1 && total > 0"><a [routerLink]="['/message/received', prev_page]">Önceki</a></li>
+            <li *ngIf="pages != page && total > 0"><a [routerLink]="['/message/received', next_page]">Sonraki</a></li>
         </ul>
     </div>
 </div>
