--- a/src/app/messages/components/sended/sended.component.html
+++ b/src/app/messages/components/sended/sended.component.html
@@ -7,14 +7,14 @@
             <div class="panel panel-default" *ngIf="message.emitter">
                 <div class="panel-body">
                     <div class="image-user pull-left">
-                        <a [routerLink]="['/perfil', message.receiver._id]">
+                        <a [routerLink]="['/profil', message.receiver._id]">
                             <img src="{{url + 'get-image-user/' + message.receiver.image}}" *ngIf="message.receiver.image" />
                             <img src="assets/user.png" *ngIf="!message.receiver.image" />
                         </a>
                     </div>
                     <div class="username pull-left">
                         <p class="name-surname">
-                            <a [routerLink]="['/perfil', message.receiver._id]">
+                            <a [routerLink]="['/profil', message.receiver._id]">
                                 {{message.receiver.name + ' ' + message.receiver.surname}}
                             </a>
                             &nbsp;|&nbsp;
@@ -23,7 +23,7 @@
                             </span>
                             &nbsp;|&nbsp;
                             <span class="date nickname">
-                                {{ (message.created_at | amFromUnix) | amLocale: 'es' | amTimeAgo }}
+                                {{ (message.created_at | amFromUnix) | amLocale: 'tr' | amTimeAgo }}
                             </span>
                         </p>
                         <p>
@@ -34,8 +34,8 @@
             </div>
         </div>
         <ul class="pagination pull-right">
-            <li *ngIf="page > 1 && total > 0"><a [routerLink]="['/mensajes/enviados', prev_page]">Önceli</a></li>
-            <li *ngIf="pages != page && total > 0"><a [routerLink]="['/mensajes/enviados', next_page]">Sonrali</a></li>
+            <li *ngIf="page > 1 && total > 0"><a [routerLink]="['/message/sent', prev_page]">Önceli</a></li>
+            <li *ngIf="pages != page && total > 0"><a [routerLink]="['/message/sent', next_page]">Sonrali</a></li>
         </ul>
     </div>
 </div>
