feat:login-home-register-users-component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
                     <a  class="dropdown-toggle" data-toggle="dropdown" href="#">{{identity.name}} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a [routerLink]="['/perfil', identity._id]"><span class="glyphicon glyphicon-user"></span> Profilim</a>
+                            <a [routerLink]="['/profil', identity._id]"><span class="glyphicon glyphicon-user"></span> Profilim</a>
                         </li>
                         <li>
                             <a [routerLink]="['/my-account']" [routerLinkActive]="['active']"><span class="glyphicon glyphicon-cog"></span>Hesap Ayarları</a>
