--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
                 [routerLinkActive]="['active']">Hikaye</a>
             <a class="btn btn-default btn-lg" role="button" [routerLink]="['/people']"
                 [routerLinkActive]="['active']">Arkadaş Bul</a>
-            <a class="btn btn-primary btn-lg" role="button" [routerLink]="['/mensajes']"
+            <a class="btn btn-primary btn-lg" role="button" [routerLink]="['/message']"
                 [routerLinkActive]="['active']">Mesajlar</a>
         </p>
         <img src="assets/social-3.png" />
