--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,40 +1,46 @@
 <div class="col-lg-5">
     <h1 class="h1-strong">{{title}}</h1>
-    <div class="alert alert-success">
-        Kullanıcı başarıyla oluşturuldu <a [routerLink]="['/login']"></a>
-    </div>
-    <div class="alert alert-danger" *ngIf="status == 'error'">
-        Daha sonra tekrar deneyin
-    </div>
     <form #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)" class="col-lg-12">
         <p>
             <label>İsim</label>
             <input type="text" name="name" #name="ngModel" [(ngModel)]="user.name" class="form-control" required />
-            <span *ngIf="!name.valid && name.touched">İsim boş girilemez</span>
+            <span *ngIf="!name.valid && name.touched" style="color:red;font-weight:bold">İsim boş girilemez</span>
         </p>
         <p>
             <label>Soy İsim</label>
             <input type="text" name="surname" #surname="ngModel" [(ngModel)]="user.surname" class="form-control"
                 required />
-            <span *ngIf="!surname.valid && surname.touched">Soyisim boş girilemez</span>
+            <span *ngIf="!surname.valid && surname.touched" style="color:red;font-weight:bold">Soyisim boş
+                girilemez</span>
         </p>
         <p>
             <label>Kullanııc Adı</label>
             <input type="text" name="nick" #nick="ngModel" [(ngModel)]="user.nick" class="form-control" required />
-            <span *ngIf="!nick.valid && nick.touched">Kullanıcı ismi boş girilemez</span>
+            <span *ngIf="!nick.valid && nick.touched" style="color:red;font-weight:bold">Kullanıcı ismi boş
+                girilemez</span>
         </p>
         <p>
             <label>E-posta</label>
             <input type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" name="email" #email="ngModel"
                 [(ngModel)]="user.email" class="form-control" required />
-            <span *ngIf="!email.valid && email.touched">E-posta boş girilemez</span>
+            <span *ngIf="!email.valid && email.touched" style="color:red;font-weight:bold">E-posta boş girilemez</span>
         </p>
         <p>
             <label>Şifre</label>
-            <input type="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="form-control"
-                required />
-            <span *ngIf="!password.valid && password.touched">Şifre boş girilemez</span>
+            <input class="form-control" type="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="form-control"
+                required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" />
+            <span class="help-block" style="color:red;font-weight:bold"
+                *ngIf="(password.errors?.pattern || !password.valid) && password.touched">
+                En az bir rakam ve bir büyük ve küçük harf ve en az 8 veya daha fazla karakter
+                içermelidir
+            </span>
         </p>
-        <input type="submit" value="{{title}}" class="btn btn-success" [disabled]="!registerForm.form.valid">
+        <input type="button" value="{{title}}" class="btn btn-success" [disabled]="!registerForm.form.valid">
+        <div class="alert alert-success">
+            Kullanıcı başarıyla oluşturuldu <a [routerLink]="['/login']"></a>
+        </div>
+        <div class="alert alert-danger" *ngIf="status == 'error'">
+            Daha sonra tekrar deneyin
+        </div>
     </form>
 </div>
